feat: dataset generation v0
